--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<p class="STYLE1"><strong>我试试</strong>????<em>的</em><strong><font class="body1">第</font></strong><br />一个HTML程序
+<p class="STYLE1"><strong>我试试快快快</strong>????<em>的</em><strong><font class="body1">第</font></strong><br />一个HTML程序
 </p>
 </body>
 </html>
